2003-09-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlDocument.cs (Save): use the encoding of the document, if
	available.

2003-08-24  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlValidatingReader.cs : Implemented SchemaType. Added support for
	  ValidationType.Schema. Added support for XmlResolver. Fixed 
	  ReadTypedValue() not to consume EndElement.

2003-08-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentNavigator.cs : Fixed MoveToFirstNamespace() that arose
	  infinite loop.
	* XmlNamespaceManager.cs : Renamed AtomStrEq to AtomicStringEquals.
	  Commented out Console.Error.WriteLine().
	* XmlUrlResolver.cs : Fixed ResolveUri() and GetEntity() to support
	  escape and unescape for relative URI string.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlParserContext.cs: Make each context inherit next.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlChar.cs (IsWhitespace): Spare enumerator allocation.
	* XmlTextWriter.cs (WriteWhitespace): Enumerators are very high in
	fat, use low-fat loops instead. Even better, call the function
	inside XmlChar for code reuse.
	* HighWaterStack.cs (added): New class that acts like a Stack, but
	helps with memory allocation.
	* XmlNamespaceManager.cs, XmlParserContext.cs: Rewrote to use
	HighWaterStack.
	* XmlTextReader.cs: Remove orderedAttributesEnumerator variable,
	use a variable that stores the position in the ArrayList.
	
2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlTextWriter.cs: Begin diet. String.Format has too much
	saturated fat, lets replace with the fat-free .Write ()
	calls. Effects best seen when Paolo's StreamWriter patch is
	applied.

2003-08-14  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNodeReader.cs : Fixed ReadAttributeValue() that might result in
	  vanishing current node.

2003-08-14  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTDValidatingReader.cs : Added SchemaType.
	  Read() Assures to return to element.